added info about red security

--- a/redSecure/redIntro.html
+++ b/redSecure/redIntro.html
@@ -99,10 +99,60 @@
         <div class="card" style="width: 18rem;">
           <img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Defensa_en_profundidad_y_altura.jpg/800px-Defensa_en_profundidad_y_altura.jpg"
-            class="card-img-top" alt="...">
+            class="card-img-top" alt="Imagen de los planos en que se puede proveer seguridad en una arquitectura de red">
           <div class="card-body">
             <p class="card-text text-justify">La seguridad de una arquitectura de red debe diseñarse bajo un concepto de
               capas, proporcionando profundidad a la defensa de la misma.</p>
+          </div>
+        </div>
+      </div>
+      <div class="container-70-reverse">
+        <div class="card" style="width: 18rem;">
+          <img
+            src="https://www.cisco.com/c/es_mx/products/security/what-is-network-security/jcr:content/Grid/subcategory_atl/layout-subcategory-atl/anchor_info.img.jpg/1613115645431.jpg"
+            class="card-img-top" alt="Imagen de  seguridad en la red">
+          <div class="card-body">
+            <p class="card-text text-justify">La seguridad de una red incluye hardware y software y se orienta a diversas amenazas.</p>
+          </div>
+          <img
+            src="https://www.cisco.com/c/es_mx/products/security/web-security-appliance/index/jcr:content/Grid/subcategory_atl/layout-subcategory-atl/anchor_info.img.jpg/1632849649693.jpg"
+            class="card-img-top" alt="Imagen 2 de seguridad en la red">
+        </div>
+        <div class="text-justify">
+          <h3 class="h3">¿Cómo funciona la seguridad de red?</h3>
+          <p>La seguridad de red combina varias capas de defensa en el perímetro y la red. En cada una de las capas se deben implementar políticas y controles, de modo que aquellos usuarios autorizados obtengan acceso a los recursos que provee la red, mientras que aquellos sin acceso sean bloqueados para evitar que se expongan vulnerabilidades y la seguridad de los usuarios sea comprometida.</p>
+          <p>Los tipos de seguridad que existen para la red, son:</p>
+          <ul>
+            <li>Firewalls</li>
+            <li>Seguridad del correo electrónico</li>
+            <li>Segmentación de la red</li>
+            <li>Control de acceso</li>
+            <li>VPN</li>
+            <li>Seguridad web</li>
+            <li>Seguridad inalámbrica</li>
+            <li>Administración de eventos e información de seguridad</li>
+            <li>Sistemas de prevención de intrusiones</li>
+            <li>Prevención de pérdida de datos</li>
+          </ul>
+        </div>
+      </div>
+      <div class="info-container-30 text-justify">
+        <div class="card text-dark bg-warning mb-3" style="max-width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Segmentación de la red</h5>
+            <p class="card-text">La segmentación definida por software clasifica el tráfico de red en distintas categorías y facilita la aplicación de políticas de seguridad. Idealmente, las clasificaciones deberían basarse en la identidad de los EndPoint, no únicamente en las direcciones IP.</p>
+          </div>
+        </div>
+        <div class="card text-light bg-secondary mb-3" style="max-width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Control de acceso</h5>
+            <p class="card-text">Para evitar posibles ataques, debe reconocer a todos los usuarios y dispositivos, y se puede bloquear dispositivos de EndPoint que no cumplen las políticas o darles acceso limitado. Este proceso se denomina control de acceso a la red (NAC).</p>
+          </div>
+        </div>
+        <div class="card text-dark bg-warning mb-3" style="max-width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Seguridad del email</h5>
+            <p class="card-text">Los gateways del correo electrónico son el principal vector de amenaza para las infracciones a la seguridad. Una aplicación de seguridad de correo electrónico bloquea los ataques entrantes y controla los mensajes salientes para prevenir la pérdida de datos sensibles.</p>
           </div>
         </div>
       </div>
