--- a/sockets/socketsIntro.html
+++ b/sockets/socketsIntro.html
@@ -161,8 +161,7 @@
     <div class="d-flex mt-4 justify-content-between align-items-center">
       <a class="btn btn-primary btn-lg" href="../index.html" role="button" aria-disabled="true">Ir a Inicio</a>
       <a class="btn btn-secondary btn-lg" href="../sockets/socketsDefin.html" role="button"
-        aria-disabled="true">Siguiente
-        Página</a>
+        aria-disabled="true">Ir a Definición de Socket</a>
     </div>
   </main>
 
